fixed video width and dark mode text bug.

--- a/main-dark.css
+++ b/main-dark.css
@@ -12,6 +12,12 @@ body {
     position: relative;
     color: white;
 }
+
+body.vidBody {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 ul {
   font-family: monospace;
 }
@@ -146,11 +152,11 @@ footer {
   z-index: 0;
 }
 
-.myVideo{ 
+.myVideo { 
   height: 500px;
 }
 
-.myVideo video{ 
+.myVideo video { 
   width: 100%;
   height: auto;
   position: absolute;
